Changed to overflow auto, added length restriction when creating en entity, solved search list bug

--- a/app/src/components/Custom/Card/DeleteEntity/DeleteEntity.module.css
+++ b/app/src/components/Custom/Card/DeleteEntity/DeleteEntity.module.css
@@ -8,7 +8,7 @@
   flex: 1;
   margin-left: 16px !important;
   margin-right: 16px !important;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .button {
