--- a/app/src/components/Custom/List/PersonItem/PersonItem.module.css
+++ b/app/src/components/Custom/List/PersonItem/PersonItem.module.css
@@ -3,5 +3,5 @@
   background-color: white !important;
 }
 .text {
-  overflow: scroll;
+  overflow: auto;
 }
