--- a/app/src/components/Custom/List/RosterItem/RosterItem.module.css
+++ b/app/src/components/Custom/List/RosterItem/RosterItem.module.css
@@ -1,3 +1,3 @@
 .text {
-  overflow: scroll;
+  overflow: auto;
 }
