--- a/app/src/tabs/Settings/ManageRoles/ManageRoles.module.css
+++ b/app/src/tabs/Settings/ManageRoles/ManageRoles.module.css
@@ -6,7 +6,7 @@
 
 .item {
   grid-area: item;
-  overflow: scroll !important;
+  overflow: auto !important;
 }
 
 .select {
