--- a/app/src/views/Main/General/UpcomingEvents/UpcomingEvents.module.css
+++ b/app/src/views/Main/General/UpcomingEvents/UpcomingEvents.module.css
@@ -21,5 +21,5 @@
 }
 
 .header {
-  overflow: scroll;
+  overflow: auto;
 }
